[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mmasim"
version = "0.1.0"
description = "A short description"
authors = [{ name="Peichen Xie", email="peichenxie@microsoft.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.6"]